--- a/backend/server/templates/home.html
+++ b/backend/server/templates/home.html
@@ -4,7 +4,12 @@
   <h1>AdventureLog API Server</h1>
   <p>
     <a class="btn btn-primary btn-lg" href="/admin" role="button">Admin Site</a>
-    <a class="btn btn-secondary btn-lg" href="/docs" role="button">API Docs</a>
+    <a
+      class="btn btn-secondary btn-lg"
+      href="/accounts/password/change"
+      role="button"
+      >Account Managment</a
+    >
   </p>
 </div>
 {% endblock %}
