--- a/backend/server/templates/base.html
+++ b/backend/server/templates/base.html
@@ -53,6 +53,7 @@
                 >Documentation</a
               >
             </li>
+
             <li>
               <a
                 target="_blank"
@@ -60,6 +61,7 @@
                 >Source Code</a
               >
             </li>
+            <li><a href="/docs">API Docs</a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
